--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Yinxiangma CAPTCHA
+= YinXiangMa CAPTCHA
 
 Author::    SouthWolf
 Copyright:: Copyright (c) 2011 SouthWolf, Yinxiangma Inc.
@@ -88,3 +88,26 @@ This method returns +true+ or +false+ after processing the parameters from the Y
 
 * Validation Error handlings
 * Better documentation
+* Switch back to local CAPTCHA or reCAPTHA when YinXiangMa is unavailable
+
+= 印象码 动态验证码
+
+{印象码}[http://www.yinxiangma.com]是目前中国国内推出的第一款视频广告验证码云服务平台，不仅提供了安全的基于云计算的视频验证码服务，为网站提供了良好的验证码用户体验，并且提出了新一代的基于用户反馈的广告计费商业模式概念。
+
+本gem提供了Rails下的印象码功能，配置简单。
+
+首先请注册{印象码}[http://www.yinxiangma.com]服务，获取API key
+建立+config/initializers/yinxiangma.rb+ 内容如下(请将publisher_key替换成您的key)
+
+  Yinxiangma.configure do |config|
+    config.publisher_key  = 'cb9d0fe8dabdea89019d845be3059973'
+    config.mode ='live'
+  end
+
+
+在Gemfile添加
+  gem "yinxiangma", :require => "yinxiangma/rails"
+  
+建立
+
+在View中插入<%= yinxiangma_tags %>， 在View中需要进行验证处插入yinxiangma_valid() 即可
